fix openapi: added operation id
